# qwerty1234-naive-bayes-classification-study

./: .gitignore  main.ipynb  pyproject.toml
src/datasets/: __init__.py  adult.py  base.py  breast_cancer_wisconsin.py  digits.py  newsgroups20.py  sms_spam_collection.py  spambase.py
src/model/: __init__.py  base.py  bernoulli_nb.py  decision_tree.py  gaussian_nb.py  knn.py  logistic_regression.py  multinomial_nb.py  random_forest.py  svc.py
