[project]
name = "qwerty1234-naive-bayes-classification-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "ucimlrepo>=0.0.7",
]
